# Redaction-Tool

./: Dockerfile  README.md  app.py  docker-compose.dev.yml  docker-compose.yml  main.py  profiles.db  pyproject.toml  redactor.py  run.sh  test_profile.py  test_redactor.py  test_template_matching.py
static/: apex-modern.css  app.js  style.css
templates/: index.html
